crossrepostatus: close --release 21 row for BAF
Last open release-N row in the strictness ladder. ByteBufferUtility.java's
jdk.internal.misc.Unsafe import was migrated to reflectively-resolved
sun.misc.Unsafe with a @Nullable UNSAFE field for non-HotSpot JVM portability
(OpenJ9, GraalVM Native Image, Android — UNSAFE becomes null instead of
ExceptionInInitializerError, freeByteBuffer no-ops, JVM Cleaner takes over).
Main compile now uses <release>21</release>; default-testCompile overrides
back to source/target so ByteBufferUtilityTest can keep importing
jdk.internal.ref.Cleaner + sun.nio.ch.DirectBuffer for its Cleaner-invocation
assertions.

BAF commits: c2470b7 (ByteBufferUtility migration) + 1b67ad0 (pom.xml flip).